# FinalProjectDSB

./: input_data.json  main.py  pyproject.toml  scraping_temp.py
app/: .env  main.py
app/common/: app_settings.py
app/controllers/: car_model_controller.py  car_platform_controller.py  regression_controller.py  scraping_controller.py
app/crud/: car_model_repository.py  car_platform_repository.py  regression_model_repository.py  scraping_repository.py
app/db/: __init__.py
app/models/: __init__.py  car.py  car_platform.py  regression_model.py  scrape_request.py  scraped_car.py
app/persistence/: env.py
app/persistence/versions/: 1277451be81b_added_regresion.py  27ea6366ba95_rewrited_regression_model.py  358ace87b3a1_initial.py  5e027df5d85d_initial.py  8e41ec634f49_initial.py  c4a6a3c849ab_initial.py
app/schemas/: car_model_schema.py  car_platform_schema.py  regression_schema.py  scraped_car_schema.py
app/services/: car_data_parser.py  csv_service.py  logger_service.py  regression_service.py  scraping_service.py  scraping_utils.py
