[project]
name = "finalprojectdsb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic~=1.16.1",
    "asyncpg~=0.30.0",
    "beautifulsoup4~=4.13.4",
    "fastapi[standard]~=0.115.12",
    "pandas~=2.3.0",
    "playwright~=1.52.0",
    "pydantic~=2.11.5",
    "pydantic-settings~=2.9.1",
    "sqlalchemy~=2.0.41",
    "statsmodels~=0.14.4",
]
